# poetry-version-from-file

./: .editorconfig  LICENSE  README.md  pyproject.toml
poetry_version_from_file/: plugin.py
